Markets, Vendors lists and profile pages

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,4 +8,8 @@
 
 <p>Welcome to your local Farmer's Market database!!! </p>
 
+<div><a href="/markets">View all Markets</a></div>
+
+<div><a href="/vendors">View all Vendors</a></div>
+
 {% endblock %}
