Functioning Maps for Markets indiv and list

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,8 @@
 <!doctype html>
-
 <html>
 
 <head>
-
+<link href="/static/map.css" rel="stylesheet">
   <title>Bay Area Farmer's Markets</title>
 
 </head>
