--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,13 +3,13 @@
 {% block content %}
 
 
-
+<div>
 <h1>Homepage</h1>
-
+<img src="https://media.giphy.com/media/l4FGBE6xf8x9Xn8ME/giphy.gif">
 <p>Welcome to your local Farmer's Market database!!! </p>
 
 <div><a href="/markets">View all Markets</a></div>
 
 <div><a href="/vendors">View all Vendors</a></div>
-
+</div>
 {% endblock %}
