--- a/templates/market_profile.html
+++ b/templates/market_profile.html
@@ -6,6 +6,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYanwYmEgnTNrEr42tDxegSIPvGOSj6qU"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/static/indivMarketMap.js"></script>
+<script src="/static/mapstyles.js"></script>
 
 <input id='market_id' type='hidden' value={{ market.market_id }}>
   <h1>{{ market.market_name }}</h1>
@@ -16,7 +17,6 @@
  <p><b>Time: </b> {{ market.market_start.strftime('%I:%M %p') }}-{{ market.market_end.strftime('%I:%M %p') }}</p>
 
  <p><b>Location:</b></p>
- <p>{{ market.address.address_street}}</p>
- <p>{{ market.address.address_city }}, {{ market.address.address_state }}</p>
+ <p>{{ market.market_address}}</p>
 <div id="market-map"></div>
 {% endblock %}
