--- a/templates/markets.html
+++ b/templates/markets.html
@@ -4,7 +4,8 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYanwYmEgnTNrEr42tDxegSIPvGOSj6qU"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/static/marketMap.js"></script>
-
+ <script src="/static/mapstyles.js"></script>
+ 
 <p>List of all Markets in our database:</p>
 
 <ul>
