MVP all search-bys & maps... needs styles and tests

--- a/static/map.css
+++ b/static/map.css
@@ -4,11 +4,16 @@ body {
 p {
     background-color: YellowGreen
 }
-/*div {
+ul {
     background-color: YellowGreen
-}*/
+}
+#form{
+    background-color: White
+}
+#link{
+    background-color: White
+}
 #market-map{
     height: 400px;
     width: 400px;
-    background-color: transparent;
 }
