--- a/templates/markets.html
+++ b/templates/markets.html
@@ -1,11 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Markets</h1>
+<head>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYanwYmEgnTNrEr42tDxegSIPvGOSj6qU"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/static/marketMap.js"></script>
- <script src="/static/mapstyles.js"></script>
- 
+<script src="/static/mapstyles.js"></script>
+</head>
+
+<h1> Markets </h1>
 <p>List of all Markets in our database:</p>
 
 <ul>
@@ -23,7 +25,6 @@
     {% endfor %}
 
   </ul>
-
 
 <div id="market-map"></div>
 {% endblock %}
