Test file added. need to connect to test data

--- a/static/map.css
+++ b/static/map.css
@@ -1,9 +1,10 @@
 body {
     background-image: url("https://www.trashedgraphics.com/wp-content/uploads/2013/01/checkerborard_background_02.jpg");
 }
-p {
+/*p {
     background-color: YellowGreen
 }
+*/
 ul {
     background-color: YellowGreen
 }
