--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,29 +5,33 @@
 
 <div>
 <h1>Welcome to your local Farmer's Market database!!! </h1>
-<h2 id='link'><a href="/markets">View all Markets</a> &nbsp; <a href="/vendors">View all Vendors</a></h2>
+<img src="/static/img/fmheader.jpg">
+<h2 id='link'><a href="/markets">View all Markets</a> <br> <a href="/vendors">View all Vendors</a></h2>
 </div>
 <br>
 <form id= "form" action='/search' method=post>
 
-    <br>Search Keyword:
+    <br><b>Search Keyword:</b>
     <input type="text" name="keyword"><br><br>
-    <input type="radio" name="searchby"value="vendor">Search for Vendors<br>
-    <input type="radio" name="searchby" value="commodity">Search for Vendors by Commodity<br>
-    <input type="radio" name="searchby" value="market">Search for Market by Name<br>
-    <input type="radio" name= "searchby"value="address">Search for Market by Address<br><br>
     <fieldset>
+    <b>Search By: </b><br>
+    <input type="radio" name="searchby"value="vendor">Vendor Name<br>
+    <input type="radio" name="searchby" value="commodity">Vendor Commodity<br>
+    <input type="radio" name="searchby" value="market">Market Name<br>
+    <input type="radio" name= "searchby"value="address">Market Address<br>
+    </fieldset>
+    <fieldset>
+    <b>Show Markets on:</b><br>
     <input type="checkbox" name="day[]" value="Sunday">Sunday
     <input type="checkbox" name="day[]" value="Monday">Monday
     <input type="checkbox" name="day[]" value="Tuesday">Tuesday
     <input type="checkbox" name="day[]" value="Wednesday">Wednesday
     <input type="checkbox" name="day[]" value="Thursday">Thursday
     <input type="checkbox" name="day[]" value="Friday">Friday
-    <input type="checkbox" name="day[]" value="Saturday">Saturday<br><br>
+    <input type="checkbox" name="day[]" value="Saturday">Saturday<br>
     </fieldset>
     <input type="submit" name="submit" value="Search">
 
 </form> 
-<img src="https://media.giphy.com/media/l4FGBE6xf8x9Xn8ME/giphy.gif">
 
 {% endblock %}
