Weather API & first tests added. Continue with bootstrap

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,20 +15,20 @@
     <input type="text" name="keyword"><br><br>
     <fieldset>
     <b>Search By: </b><br>
-    <input type="radio" name="searchby"value="vendor">Vendor Name<br>
-    <input type="radio" name="searchby" value="commodity">Vendor Commodity<br>
-    <input type="radio" name="searchby" value="market">Market Name<br>
-    <input type="radio" name= "searchby"value="address">Market Address<br>
+    <input type="radio" name="search_by"value="vendor">Vendor Name<br>
+    <input type="radio" name="search_by" value="commodity">Vendor Commodity<br>
+    <input type="radio" name="search_by" value="market">Market Name<br>
+    <input type="radio" name= "search_by"value="address">Market Address<br>
     </fieldset>
     <fieldset>
     <b>Show Markets on:</b><br>
-    <input type="checkbox" name="day[]" value="Sunday">Sunday
-    <input type="checkbox" name="day[]" value="Monday">Monday
-    <input type="checkbox" name="day[]" value="Tuesday">Tuesday
-    <input type="checkbox" name="day[]" value="Wednesday">Wednesday
-    <input type="checkbox" name="day[]" value="Thursday">Thursday
-    <input type="checkbox" name="day[]" value="Friday">Friday
-    <input type="checkbox" name="day[]" value="Saturday">Saturday<br>
+    <input type="checkbox" name="day" value="Sunday">Sunday
+    <input type="checkbox" name="day" value="Monday">Monday
+    <input type="checkbox" name="day" value="Tuesday">Tuesday
+    <input type="checkbox" name="day" value="Wednesday">Wednesday
+    <input type="checkbox" name="day" value="Thursday">Thursday
+    <input type="checkbox" name="day" value="Friday">Friday
+    <input type="checkbox" name="day" value="Saturday">Saturday<br>
     </fieldset>
     <input type="submit" name="submit" value="Search">
 
