--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,20 @@
 <html>
 
 <head>
-<link href="/static/map.css" rel="stylesheet">
-  <title>Bay Area Farmer's Markets</title>
-
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/project.css" rel="stylesheet">
+    <link href="/static/map.css" rel="stylesheet">
+    <title>Bay Area Farmer's Markets</title>
 </head>
+
 <h3><a href="/">Go to Home Page</a></h3>
 
 <body>
 
   {% block content %} put your content here {% endblock %}
+  
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
 
 </body>
 
