--- a/templates/market_profile.html
+++ b/templates/market_profile.html
@@ -7,28 +7,39 @@
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/static/indivMarketMap.js"></script>
 <script src="/static/mapstyles.js"></script>
+<script src="/static/weather.js"></script>
+
 
 <input id='market_id' type='hidden' value={{ market.market_id }}>
+
+<div class='container-fluid'>
   <h1>{{ market.market_name }}</h1>
 
-  <h3>Market Info</h3>
+<div id="row">
+    <div id="col-xs-6">
+    <h3>Market Info</h3>
+    <div id='weather'>
+    <div id='weather-div'></div>
 
-<p><b>Day:</b> {{ market.market_day }}</p>
-<p><b>Time: </b> {{ market.market_start.strftime('%I:%M %p') }}-{{ market.market_end.strftime('%I:%M %p') }}</p>
+    <br><p><b>Day:</b> {{ market.market_day }}</p>
+    <p><b>Time: </b> {{ market.market_start.strftime('%I:%M %p') }}-{{ market.market_end.strftime('%I:%M %p') }}</p>
 
-<p><b>Location:</b></p>
-<p>{{ market.market_address}}</p>
-<br>
-<b>Vendors at {{ market.market_name }}</b>
- <ul>
+    <p><b>Location:</b></p>
+    <p>{{ market.market_address}}</p><br>
+    </div>
+    <div id="col-xs-6">
+    <b>Vendors at {{ market.market_name }}</b>
+     <ul>
     <!-- Lists all vendors for specific market with link to vendor page-->
-
     {% for vendor in vendors %}
       <li>
         <a href="/vendors/{{ vendor.vendor_id }}">{{ vendor.vendor_name }}</a>
       </li>
     {% endfor %}
-</ul>
-
-<div id="market-map"></div>
+    </ul>
+    </div>
+</div>
+<div id="row">
+    <div id="market-map"></div>
+</div>
 {% endblock %}
