--- a/templates/vendors.html
+++ b/templates/vendors.html
@@ -1,27 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-
-
+<div class="container-fluid">
 <h1>Vendors</h1>
-
-<p>List of all vendors in our database:</p>
-
-<ul>
-
-    <!-- Lists all vendors in vendors table and allows each name to be a clickable link leading to the vendor profile page-->
-
-    {% for vendor in vendors %}
-
-      <li>
-
-        <a href="/vendors/{{ vendor.vendor_id }}">{{ vendor.vendor_name }}</a>
-
-      </li>
-
-    {% endfor %}
-
-  </ul>
-
+    <div class="row">
+        <div class="col-xs-4">
+            <p>List of all vendors in our database:</p>
+                <ul>
+            <!-- Lists all vendors in vendors table and allows each name to be a clickable link leading to the vendor profile page-->
+            {% for vendor in vendors %}
+              <li><a href="/vendors/{{ vendor.vendor_id }}">{{ vendor.vendor_name }}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
+</div>
 {% endblock %}
