--- a/templates/market_profile.html
+++ b/templates/market_profile.html
@@ -11,35 +11,45 @@
 
 
 <input id='market_id' type='hidden' value={{ market.market_id }}>
-
+<h1>{{ market.market_name }}</h1>
 <div class='container-fluid'>
-  <h1>{{ market.market_name }}</h1>
 
-<div id="row">
-    <div id="col-xs-6">
-    <h3>Market Info</h3>
-    <div id='weather'>
-    <div id='weather-div'></div>
+<form action="/markets/{{ market.market_id }}/" method="POST">
+        <label>Favorite this Market:
+          <input type="button" name="Favorite" value=True>
+        </label>
+        <input type="submit" value="Submit">
+</form>
 
-    <br><p><b>Day:</b> {{ market.market_day }}</p>
-    <p><b>Time: </b> {{ market.market_start.strftime('%I:%M %p') }}-{{ market.market_end.strftime('%I:%M %p') }}</p>
+<div id='row'>
+    <div id='col-xs-6'>
+        <br><p><b>Day:</b> {{ market.market_day }}</p>
+        <p><b>Time: </b> {{ market.market_start.strftime('%I:%M %p') }}-{{ market.market_end.strftime('%I:%M %p') }}</p>
 
-    <p><b>Location:</b></p>
-    <p>{{ market.market_address}}</p><br>
+        <p><b>Location:</b></p>
+        <p>{{ market.market_address}}</p><br>
     </div>
-    <div id="col-xs-6">
-    <b>Vendors at {{ market.market_name }}</b>
-     <ul>
-    <!-- Lists all vendors for specific market with link to vendor page-->
-    {% for vendor in vendors %}
-      <li>
-        <a href="/vendors/{{ vendor.vendor_id }}">{{ vendor.vendor_name }}</a>
-      </li>
-    {% endfor %}
-    </ul>
+    <div id='col-xs-3'>
+        <h3>Market Info</h3>
+        <div id='weather-div'></div>
     </div>
 </div>
-<div id="row">
+<div id='row'>
+    <div id='col-xs-4'>
+        <b>Vendors at {{ market.market_name }}</b>
+         <ul>
+        <!-- Lists all vendors for specific market with link to vendor page-->
+        {% for vendor in vendors %}
+          <li>
+            <a href="/vendors/{{ vendor.vendor_id }}">{{ vendor.vendor_name }}</a>
+          </li>
+        {% endfor %}
+        </ul>
+    </div>
+</div>
+<div id='row'>
     <div id="market-map"></div>
 </div>
+</div>
+
 {% endblock %}
