--- a/templates/markets.html
+++ b/templates/markets.html
@@ -7,24 +7,22 @@
 <script src="/static/mapstyles.js"></script>
 </head>
 
-<h1> Markets </h1>
-<p>List of all Markets in our database:</p>
-
-<ul>
-
-    <!--Lists all markets in markets table and allows each name to be a clickable link leading to the market profile page-->
-
-    {% for market in markets %}
-
-      <li>
-
-        <a href="/markets/{{ market.market_id }}">{{ market.market_name }}</a>
-
-      </li>
-
-    {% endfor %}
-
-  </ul>
-
-<div id="market-map"></div>
+<div class="container-fluid">
+    <h1> Markets </h1>
+    <p>List of all Markets in our database:</p>
+    
+    <div class="row">
+        <div class="col-xs-4">
+            <ul>
+                <!--Lists all markets in markets table and allows each name to be a clickable link leading to the market profile page-->
+                {% for market in markets %}
+                  <li><a href="/markets/{{ market.market_id }}">{{ market.market_name }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
+        <div class="col-xs-6">
+            <div id="market-map"></div>
+        </div>
+    </div>
+</div>
 {% endblock %}
