--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,7 @@
 
 <head>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
-    <link href="/static/project.css" rel="stylesheet">
-    <link href="/static/map.css" rel="stylesheet">
+    <link href="/static/styles.css" rel="stylesheet">
     <title>Bay Area Farmer's Markets</title>
 </head>
 
