--- a/templates/markets.html
+++ b/templates/markets.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <head>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYanwYmEgnTNrEr42tDxegSIPvGOSj6qU"></script>
-<script src="https://code.jquery.com/jquery.js"></script>
+<script src="http://code.jquery.com/jquery.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYanwYmEgnTNrEr42tDxegSIPvGOSj6qU">
+</script>
 <script src="/static/marketMap.js"></script>
 <script src="/static/mapstyles.js"></script>
 </head>
