Flip markets for vendors and register modals

--- a/templates/flip.html
+++ b/templates/flip.html
@@ -13,8 +13,9 @@
                     <div class="face front" style="background-image: url('/static/img/Flip/{{ vendor.vendor_name }}.jpg');">
                         {{ vendor.vendor_name }}
                     </div> 
-                    <div class="face back">
+                    <div class="face back" data-vendorid={{ vendor.vendor_id }}>
                         {{ vendor.vendor_commodity }}
+
                     </div> 
                   </div> 
             </div>
