--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link href="/static/styles.css" rel="stylesheet">
     <title>Bay Area Farmer's Markets</title>
 </head>
-
+<!-- ------------------------------- NAV BAR ------------------------------- -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light" style="background-color: YellowGreen;">
     <div class="container-fluid">
     <div class="navbar-header">
@@ -16,26 +16,26 @@
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/markets">View Markets</a></li>
         <li><a href="/vendors">View Vendors</a></li>
-        <li>
-            {% if "user_id" in session %}
-                <a href="/logout">Logout</a></button>
-            {% else %}
-                <a href="#" data-toggle="modal" data-target="#exampleModal">Login</a>
-            {% endif %}
-        </li>
+        {% if "user_id" in session %}
+            <li><a href="/logout">Logout</a></button></li>
+        {% else %}
+            <li><a href="#" id="pull-right" data-toggle="modal" data-target="#loginModal">Login</a></li>
+            <li><a href="#" id="pull-right" data-toggle="modal" data-target="#registerModal">Register</a></li>
+        {% endif %}
     </ul>
   </div>
 </nav>
 
+
 <body>
 
 {% block content %} put your content here {% endblock %}
-    
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- --------------------------- LOGIN MODAL -------------------------------- -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Please Sign In</h5>
+        <h1 class="modal-title" id="exampleModalLabel">Please Sign In</h1>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -47,13 +47,55 @@
                     <input type="text" name="email"><br>
                     <br>Password<br>
                     <input type="password" name="password"><br><br>
-                    <input type="submit" name="submit" value="Login">
+                    <input id="login" type="submit" name="submit" value="Login">
                 </form>
             </div>
       </div>
     </div>
   </div>
 </div>
+
+<!-- --------------------------- REGISTER MODAL -------------------------------- -->
+<div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title" id="exampleModalLabel">Please Register</h1>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+            <div class="form-group">
+                <form action="/register" method="POST">
+                    <label>Email</label>
+                    <br>
+                    <input type="email" name="email" required><br><br>
+                    <label>Password</label>
+                    <br>
+                    <input type="password" name="password" required><br><br>
+                    <label>Age</label>
+                    <br>
+                    <input type="number" name="age" required><br><br>
+                    <label>Zipcode</label>
+                    <br>
+                    <input type="text" name="zipcode" required><br><br>
+                    <br>
+                    <input type="submit" value="Register">
+                </form>
+            </div>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+ $(document).on('click', '#login', function(){
+   $('#loginModal').modal('toggle');
+   $('#registerModal').modal('show');
+
+   return false;
+})
+</script>
 
 <script src="http://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.js"></script>
