--- a/templates/registration.html
+++ b/templates/registration.html
@@ -9,19 +9,19 @@
 
     <label>Email</label>
     <br>
-    <input type="email" name="email"><br><br>
+    <input type="email" name="email" required><br><br>
 
     <label>Password</label>
     <br>
-    <input type="password" name="password"><br><br>
+    <input type="password" name="password" required><br><br>
 
     <label>Age</label>
     <br>
-    <input type="number" name="age"><br><br>
+    <input type="number" name="age" required><br><br>
 
     <label>Zipcode</label>
     <br>
-    <input type="text" name="zipcode"><br><br>
+    <input type="text" name="zipcode" required><br><br>
     <br>
     <input type="submit" value="Register">
 
