--- a/templates/vendor_profile.html
+++ b/templates/vendor_profile.html
@@ -33,16 +33,6 @@
         </ul><br>
 
         <ul>
-            <b>Markets:</b><br>
-            {% for market in vendor.markets %}
-                <li><a href="/markets/{{ market.market_id }}">{{ market.market_name }}</a></li>
-            {% endfor %}
-        </ul>
-    </div>
-        
-    <div class="col-xs-6">
-        <div id="market-map"></div>
-        <ul>
         {% if vendor.credit %}
             <li><img src="/static/img/shopping-store.png"> Accepts Credit Cards</li>
         {% endif %}
@@ -50,7 +40,48 @@
             <li><img src="/static/img/organic.png"></li>
         {% endif %}
         </ul>
+        
+        <!-- <ul>
+            <b>Markets:</b><br>
+            {% for market in vendor.markets %}
+                <li><a href="/markets/{{ market.market_id }}">{{ market.market_name }}</a></li>
+            {% endfor %}
+        </ul> -->
     </div>
+        
+    <div class="col-xs-6">
+        <div id="market-map"></div>
+    </div>
+</div>
+<div class="row">
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="/static/flip.js"></script>
+
+<div class="container-fluid">
+    <div id='row'>
+        {% for market in vendor.markets %}
+            <div class="col-xs-4">
+                <div class="flip"> 
+                  <div class="card"> 
+                    <div class="face front" style="background-image: url('/static/img/barnwood.jpg');">
+                        {{ market.market_name }}
+                    </div> 
+                    <div class="face back" data-vendorid={{ vendor.vendor_id }}>
+                        {{ market.market_day }}
+
+                    </div> 
+                  </div> 
+            </div>
+            </div>   
+        {% endfor %}
+    </div>
+</div>
+
+</html>
+
+
+
+
 </div>
 </div>
 {% endblock %}
