secrets, geolocation, zoom, reimagined server.py, flip vendors rerouted

--- a/static/styles.css
+++ b/static/styles.css
@@ -8,6 +8,10 @@ body {
 ul {
     background-color: YellowGreen
 }
+
+span {
+  background-color: YellowGreen
+}
 #form{
     background-color: White
 }
@@ -68,3 +72,4 @@ ul {
   transform:rotatey(-180deg);
   -webkit-transform:rotatey(-180deg); /* Safari and Chrome */
 }
+
