--- a/templates/flip.html
+++ b/templates/flip.html
@@ -10,8 +10,8 @@
             <div class="col-xs-4">
                 <div class="flip"> 
                   <div class="card"> 
-                    <div class="face front" style="background-image: url('/static/img/Flip/{{ vendor.vendor_name }}.jpg');">
-                        {{ vendor.vendor_name }}
+                    <div class="face front" style="background-image: url('/static/img/Flip/{{ vendor.vendor_name }}.jpg'); width: 400px; height: 200px;">
+                        <span>&nbsp;{{ vendor.vendor_name }}&nbsp;</span>
                     </div> 
                     <div class="face back" data-vendorid={{ vendor.vendor_id }}>
                         {{ vendor.vendor_commodity }}
