--- a/templates/markets.html
+++ b/templates/markets.html
@@ -2,7 +2,7 @@
 {% block content %}
 <head>
 <script src="http://code.jquery.com/jquery.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYanwYmEgnTNrEr42tDxegSIPvGOSj6qU">
+<script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}">
 </script>
 <script src="/static/marketMap.js"></script>
 <script src="/static/mapstyles.js"></script>
