--- a/templates/vendor_profile.html
+++ b/templates/vendor_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYanwYmEgnTNrEr42tDxegSIPvGOSj6qU"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}"></script>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/static/vendorMktMap.js"></script>
 <script src="/static/mapstyles.js"></script>
@@ -24,7 +24,8 @@
 
 
 <div class="row">
-    <div class="col-xs-4">
+    <div class="col-xs-4 col-xs-2-offset"> 
+        <img src='/static/img/Flip/{{ vendor.vendor_name }}.jpg' style="width: 400px; height: 400px;">
         <ul>
             <b>Commodities:</b><br>
             {% for commodity in commodities %}
@@ -34,19 +35,19 @@
 
         <ul>
         {% if vendor.credit %}
-            <li><img src="/static/img/shopping-store.png"> Accepts Credit Cards</li>
+            <li><img src="/static/img/Icons/shopping-store.png"> Accepts Credit Cards</li>
         {% endif %}
         {% if vendor.organic %}
             <li><img src="/static/img/organic.png"></li>
         {% endif %}
         </ul>
         
-        <!-- <ul>
+        <ul>
             <b>Markets:</b><br>
             {% for market in vendor.markets %}
                 <li><a href="/markets/{{ market.market_id }}">{{ market.market_name }}</a></li>
             {% endfor %}
-        </ul> -->
+        </ul>
     </div>
         
     <div class="col-xs-6">
@@ -57,7 +58,7 @@
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="/static/flip.js"></script>
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div id='row'>
         {% for market in vendor.markets %}
             <div class="col-xs-4">
@@ -76,10 +77,7 @@
         {% endfor %}
     </div>
 </div>
-
-</html>
-
-
+ -->
 
 
 </div>
